# cyber_breach

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
lib/: CMakeLists.txt
lib/include/cyber/: capture.hpp  clicker.hpp  common.hpp  detect.hpp  init.hpp  layout.hpp  mouse.hpp  parse.hpp  solve.hpp  term.hpp
lib/src/cyber/: capture.cpp  clicker.cpp  detect.cpp  init.cpp  mouse.cpp  parse.cpp  solve.cpp
test/: CMakeLists.txt
test/src/: main.cpp
